--- a/.github/workflows/create-cli-deps-pr.yml
+++ b/.github/workflows/create-cli-deps-pr.yml
@@ -42,9 +42,9 @@ jobs:
       - name: Git Config
         run: |
           npm_version=`npm view npm@latest version`
-          release_branch='npm-${npm_version}'
-          git checkout -b ${release_branch}
-          git push --set-upstream origin ${release_branch}
+          release_branch="npm-${release_branch}"
+          git checkout -b $release_branch
+          git push --set-upstream origin $release_branch
       # - name: Create PR
       #   uses: peter-evans/create-pull-request@v3.9.1
       #   with:
