--- a/.github/workflows/create-cli-deps-pr.yml
+++ b/.github/workflows/create-cli-deps-pr.yml
@@ -14,12 +14,12 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y software-properties-common
-          sudo add-apt-repository -y ppa:git-core/ppa
-          sudo apt-get install -y git
+      # - name: Install dependencies
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y software-properties-common
+      #     sudo add-apt-repository -y ppa:git-core/ppa
+      #     sudo apt-get install -y git
 
       # Runs a set of commands using the runners shell
       - name: Checkout
@@ -44,7 +44,7 @@ jobs:
           # [Learn more about creating and using encrypted secrets](https://help.github.com/en/actions/automating-your-workflow-with-github-actions/creating-and-using-encrypted-secrets)
           #
           # Default: ${{ github.token }}
-          # token: ''
+          token: ${{ secrets.token }}
 
       - name: Git config
         run: |
@@ -58,17 +58,36 @@ jobs:
       # git checkout -b $release_branch
       # git push --set-upstream origin $release_branch
 
-      - name: Run update steps
+      - name: Clone CLI into tmp
+        uses: actions/checkout@v2
+        with:
+          fetch: 0
+          repository: npm/cli
+          token: ${{ secrets.token }}
+          path: tmp/cli
+      
+      - name: Update CLI dependency
         run: |
-          ./tools/update-npm.sh ${PR_NPM_VERSION}
-          git add -A deps/npm
-          git commit -m "deps: upgrade npm to $PR_NPM_VERSION"
-          sh ./configure
-          make -j4
-          sh ./tools/license-builder.sh
-          git add .
-          git commit -m "doc: update npm LICENSE using license-builder.sh"
-          git rebase --whitespace=fix master
+          cd tmp/cli
+          git pull origin
+          git checkout v7.12.1
+          make 
+          make release
+          cd ../../deps
+          tar zxf ../tmp/cli/release/npm-7.11.1.tgz
+          rm -rf ../tmp
+
+      # - name: Run update steps
+      #   run: |
+      #     ./tools/update-npm.sh "${PR_NPM_VERSION}"
+      #     git add -A deps/npm
+      #     git commit -m "deps: upgrade npm to ${PR_NPM_VERSION}"
+      #     sh ./configure
+      #     make -j4
+      #     sh ./tools/license-builder.sh
+      #     git add .
+      #     git commit -m "doc: update npm LICENSE using license-builder.sh"
+      #     git rebase --whitespace=fix master
 
       # - name: Run tests
       #   run: |
