--- a/.github/workflows/create-cli-deps-pr.yml
+++ b/.github/workflows/create-cli-deps-pr.yml
@@ -5,6 +5,8 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+permissions: read-all|write-all
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -52,30 +54,30 @@ jobs:
           release_branch="gimli01-${npm_version}"
           echo "PR_NPM_VERSION=${npm_version} >> $GITHUB_ENV"
           echo "PR_RELEASE_BRANCH=${release_branch} >> $GITHUB_ENV"
-          git remote add downstream https://github.com/nodejs/node.git
-          git remote add npm git@github.com:npm/node.git
 
       # git checkout -b $release_branch
       # git push --set-upstream origin $release_branch
 
-      - name: Clone CLI into tmp
-        uses: actions/checkout@v2
-        with:
-          fetch: 0
-          repository: npm/cli
-          token: ${{ secrets.token }}
-          path: tmp/cli
+      # - name: Clone CLI into tmp
+      #   uses: actions/checkout@v2
+      #   with:
+      #     fetch: 0
+      #     repository: npm/cli
+      #     token: ${{ secrets.token }}
+      #     path: tmp/cli
       
       - name: Update CLI dependency
         run: |
-          cd tmp/cli
-          git pull origin
-          git checkout v7.12.1
-          make 
-          make release
-          cd ../../deps
-          tar zxf ../tmp/cli/release/npm-7.11.1.tgz
-          rm -rf ../tmp
+          gh repo clone npm/cli
+        # run: |
+        #   cd tmp/cli
+        #   git pull origin
+        #   git checkout v7.12.1
+        #   make 
+        #   make release
+        #   cd ../../deps
+        #   tar zxf ../tmp/cli/release/npm-7.11.1.tgz
+        #   rm -rf ../tmp
 
       # - name: Run update steps
       #   run: |
