--- a/.github/workflows/create-cli-deps-pr.yml
+++ b/.github/workflows/create-cli-deps-pr.yml
@@ -71,7 +71,7 @@ jobs:
       
       - name: Update CLI dependency
         run: |
-          gh auth login --with-token '${{ github.token }}'
+          gh auth login --with-token < '${{ github.token }}'
         # run: |
         #   cd tmp/cli
         #   git pull origin
