--- a/.github/workflows/create-cli-deps-pr.yml
+++ b/.github/workflows/create-cli-deps-pr.yml
@@ -11,5 +11,5 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          gh clone npm/node && cd node
+          gh repo clone npm/node && cd node
           ./tools/update-npm.sh `npm view npm@latest version`
