--- a/.github/workflows/create-cli-deps-pr.yml
+++ b/.github/workflows/create-cli-deps-pr.yml
@@ -11,5 +11,6 @@ jobs:
     steps:
       - name: Checkout
         run: |
+          echo '$GITHUB_TOKEN'
           gh repo clone npm/node && cd node
           ./tools/update-npm.sh `npm view npm@latest version`
