--- a/.github/workflows/create-cli-deps-pr.yml
+++ b/.github/workflows/create-cli-deps-pr.yml
@@ -12,5 +12,6 @@ jobs:
       - name: Checkout
         run: |
           echo $GITHUB_TOKEN
-          gh repo clone npm/node && cd node
+          gh repo clone npm/node
+          gh repo clone npm/cli
           ./tools/update-npm.sh `npm view npm@latest version`
