--- a/.github/workflows/create-cli-deps-pr.yml
+++ b/.github/workflows/create-cli-deps-pr.yml
@@ -14,5 +14,6 @@ jobs:
         run: |
           gh repo clone npm/node
           gh repo clone npm/cli
-          cd cli && git checkout gimli01/deps-pr
-          ./node/tools/update-npm.sh `npm view npm@latest version`
+          ls -al
+          # cd cli && git checkout gimli01/deps-pr
+          # ./node/tools/update-npm.sh `npm view npm@latest version`
