--- a/.github/workflows/create-cli-deps-pr.yml
+++ b/.github/workflows/create-cli-deps-pr.yml
@@ -15,6 +15,8 @@ jobs:
           gh repo clone npm/node
           cd node && git checkout gimli01/deps-pr
           ./tools/update-npm.sh `npm view npm@latest version`
+          git config user.name "npm-robot"
+          git config user.email "ops+robot@npmjs.com"
           git add -A deps/npm
           git commit -m "deps: upgrade npm to $NPM_VERSION"
           git rebase --whitespace=fix gimli01/deps-pr
