--- a/.github/workflows/create-cli-deps-pr.yml
+++ b/.github/workflows/create-cli-deps-pr.yml
@@ -27,7 +27,7 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
+          branch: gimli01/deps-pr
       - name: Create PR against nodejs/node
         run: |
-          gh pr create --head npm:gimli01/deps-pr --fill -R isaacs/node
+          gh pr create --fill -R isaacs/node
