--- a/.github/workflows/create-cli-deps-pr.yml
+++ b/.github/workflows/create-cli-deps-pr.yml
@@ -32,4 +32,6 @@ jobs:
       - name: Create PR against nodejs/node
         run: |
           git status
+          git diff 
+          git config -l
           gh pr create -R "nodejs/node" -B "master" -H "npm:gimli01/deps-pr" --title "test" --body "test"
