--- a/.github/workflows/create-cli-deps-pr.yml
+++ b/.github/workflows/create-cli-deps-pr.yml
@@ -10,7 +10,7 @@ jobs:
   create-pull-request:
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.NPM_ROBOT_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       REPO: ${{ github.repository }}
     steps:
       - name: Checkout npm/node
