--- a/.github/workflows/create-cli-deps-pr.yml
+++ b/.github/workflows/create-cli-deps-pr.yml
@@ -26,6 +26,7 @@ jobs:
           echo $npm_version
           git config user.name "npm-robot"
           git config user.email "ops+robot@npmjs.com"
+          git checkout gimli01/deps-pr
           ./tools/update-npm.sh "$version"
-          git push origin master
-          gh pr create -R "gimli01/node" -B "master" -H "npm:master" --title "deps(cli): upgrade npm to $version" --body ""
+          git push origin gimli01/deps-pr
+          gh pr create -R "gimli01/node" -B "master" -H "npm:gimli01/deps-pr" --title "deps(cli): upgrade npm to $version" --body ""
