--- a/.github/workflows/create-cli-deps-pr.yml
+++ b/.github/workflows/create-cli-deps-pr.yml
@@ -27,6 +27,6 @@ jobs:
           git config user.name "npm-robot"
           git config user.email "ops+robot@npmjs.com"
           git checkout gimli01/deps-pr
-          ./tools/update-npm.sh "${version}"
+          ./tools/update-npm.sh "$npm_version"
           git push origin gimli01/deps-pr
           gh pr create -R "gimli01/node" -B "master" -H "npm:gimli01/deps-pr" --title "deps(cli): upgrade npm to $version" --body ""
